# -2016-ZMPO-List5-

./: .gitignore  CMakeLists.txt  CShapesRunner.cpp  ListAllFiles.py  README.md  ZMPO-Lista3.docx  ZMPO-Lista5.pdf.docx  ZMPO_lista_3.docx  ~$PO-Lista3.docx
Bridges/: BridgesModel.cpp  BridgesModel.hpp  CircleAreaBridge.cpp  CircleAreaBridge.hpp  CirclePerimeterBridge.cpp  CirclePerimeterBridge.hpp  IBridge.cpp  IBridge.hpp  RectangleAreaBridge.cpp  RectangleAreaBridge.hpp  RectanglePerimeterBridge.cpp  RectanglePerimeterBridge.hpp  SquareAreaBridge.cpp  SquareAreaBridge.hpp  SquarePerimeterBridge.cpp  SquarePerimeterBridge.hpp  TrapezoidAreaBridge.cpp  TrapezoidAreaBridge.hpp  TrapezoidPerimeterBridge.cpp  TrapezoidPerimeterBridge.hpp  TriangleAreaBridge.cpp  TriangleAreaBridge.hpp  TrianglePerimeterBridge.cpp  TrianglePerimeterBridge.hpp
CShapes/: CShapes.sln
CShapes/CShapes/: CPointUT.cpp  CRectangleUT.cpp  CShapes.sln  CShapesRunner.cpp  ClassDiagram.cd  Flyweight.cpp  Flyweight.h  FlyweightProperAmountOfArgsButWrongMT.cpp  FlyweightProperArgsMT.cpp  FlyweightUnproperAmountOfArgsMT.cpp  Interface.cpp  Interface.hpp  Logger.cpp  Logger.h  ParsingValuesUT.h  Point.cpp  Point.hpp  Rectangle.cpp  Rectangle.h  Shape.cpp  Stub.cpp  Utils.cpp  Utils.hpp  UtilsForMT.cpp
CShapes/CShapes/Geometry/: CoordinatesBelongability.cpp  CoordinatesBelongability.h
CShapes/CShapes/Handlers/: CreatePointCopyHandler.cpp  CreatePointCopyHandler.h  CreatePointHandler.cpp  CreatePointHandler.h  CreateRectCopyHandler.cpp  CreateRectCopyHandler.h  CreateRectDefaultHandler.cpp  CreateRectDefaultHandler.h  CreateRectDoubleHandler.cpp  CreateRectDoubleHandler.h  CreateRectPointsHandler.cpp  CreateRectPointsHandler.h  FieldRectHandler.cpp  FieldRectHandler.h  GetPointXHandler.cpp  GetPointXHandler.h  GetPointYHandler.cpp  GetPointYHandler.h  GoHandler.cpp  GoHandler.h  HelpHandler.cpp  HelpHandler.h  IHandler.cpp  IHandler.h  IPointAndRectangleHandler.cpp  IPointAndRectangleHandler.h  IPointHandler.cpp  IPointHandler.h  IShapeHandler.cpp  IShapeHandler.h  PrintAllHandler.cpp  PrintAllHandler.h  RemoveAllHandler.cpp  RemoveAllHandler.h  RemoveHandler.cpp  RemoveHandler.h  SetPointHandler.cpp  SetPointHandler.h  ShowRectHandler.cpp  ShowRectHandler.h
CShapes/CShapes/MT_UT/: CPointUT.cpp  CRectangleUT.cpp  CoordinatesBelongabilityUT.cpp  FlyweightProperAmountOfArgsButWrongMT.cpp  FlyweightProperArgsMT.cpp  FlyweightUnproperAmountOfArgsMT.cpp
CShapes/CShapes/Shapes/: Point.cpp  Rectangle.cpp  Rectangle.h  Shape.h
CoverageReport-2016-11-02-21h30m58s/: index.html
CoverageReport-2016-11-02-21h30m58s/Modules/: CShapes.html
CoverageReport-2016-11-02-21h30m58s/Modules/CShapes/: cpointut.cpp.html  createpointcopyhandler.cpp.html  createpointhandler.cpp.html  createrectcopyhandler.cpp.html  createrectdefaulthandler.cpp.html  createrectdoublehandler.cpp.html  createrectpointshandler.cpp.html  crectangleut.cpp.html  cshapesrunner.cpp.html  fieldrecthandler.cpp.html  flyweight.cpp.html  flyweightproperamountofargsbutwrongmt.cpp.html  flyweightproperargsmt.cpp.html  getpointxhandler.cpp.html  getpointyhandler.cpp.html  gohandler.cpp.html  helphandler.cpp.html  ihandler.cpp.html  interface.cpp.html  ipointandrectanglehandler.cpp.html  ipointhandler.cpp.html  ishapehandler.cpp.html  logger.cpp.html  point.cpp.html  printallhandler.cpp.html  rectangle.cpp.html  setpointhandler.cpp.html  shape.cpp.html  showrecthandler.cpp.html  stub.cpp.html  utils.cpp.html  utils.hpp.html  utilsformt.cpp.html
Flyweight/: Flyweight.cpp  Flyweight.hpp
Geometry/: CoordinatesBelongability.cpp
Handlers/: AreaHandler.cpp  AreaHandler.hpp  AreasHandler.cpp  AreasHandler.hpp  CreateCircleDoubleHandler.cpp  CreateCircleDoubleHandler.hpp  CreatePointCopyHandler.cpp  CreatePointCopyHandler.hpp  CreatePointHandler.cpp  CreatePointHandler.hpp  CreateRectCopyHandler.cpp  CreateRectCopyHandler.hpp  CreateRectDefaultHandler.cpp  CreateRectDefaultHandler.hpp  CreateRectDoubleHandler.cpp  CreateRectDoubleHandler.hpp  CreateRectPointsHandler.cpp  CreateRectPointsHandler.hpp  CreateSquareDoubleHandler.cpp  CreateSquareDoubleHandler.hpp  CreateTrapezoidDoubleHandler.cpp  CreateTrapezoidDoubleHandler.hpp  CreateTriangleDoubleHandler.cpp  CreateTriangleDoubleHandler.hpp  FieldRectHandler.cpp  FieldRectHandler.hpp  GetPointXHandler.cpp  GetPointXHandler.hpp  GetPointYHandler.cpp  GetPointYHandler.hpp  GoHandler.cpp  GoHandler.hpp  HelpHandler.cpp  HelpHandler.hpp  IHandler.cpp  IHandler.hpp  IPointAndRectangleHandler.cpp  IPointAndRectangleHandler.hpp  IPointHandler.cpp  IPointHandler.hpp  (+16 more)
MT_UT/: CBridgesUT.cpp  CPointUT.cpp  CRectangleUT.cpp  CShapesUT.cpp  CoordinatesBelongabilityUT.cpp  FlyweightProperAmountOfArgsButWrongMT.cpp  FlyweightProperArgsMT.cpp  FlyweightUnproperAmountOfArgsMT.cpp  ParsingValuesUT.hpp
Prototype/: ConsoleApplication11.cpp
Shapes/: Circle.cpp  Circle.hpp  Point.cpp  Point.hpp  Rectangle.cpp  Rectangle.hpp  Shape.cpp  Shape.hpp  Square.cpp  Square.hpp  Trapezoid.cpp  Trapezoid.hpp  Triangle.cpp  Triangle.hpp
Utils/: Interface.cpp  Interface.hpp  Logger.hpp  Stub.cpp  Stub.hpp  Utils.cpp  Utils.hpp  UtilsForMT.cpp  UtilsForMT.hpp
